[gd_scene load_steps=4 format=3 uid="uid://cjg5o8v2f7qlt"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_fgspa"]

[sub_resource type="FontVariation" id="FontVariation_g3e6p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uoc1t"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fgspa")

[node name="START" type="Button" parent="."]
layout_mode = 2
offset_left = 313.0
offset_top = 198.0
offset_right = 830.0
offset_bottom = 275.0
theme_override_fonts/font = SubResource("FontVariation_g3e6p")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_uoc1t")
text = "START"

[node name="CHARACTERS" type="Button" parent="."]
layout_mode = 2
offset_left = 313.0
offset_top = 307.0
offset_right = 824.0
offset_bottom = 384.0
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_uoc1t")
text = "CHARACTERS"

[node name="HOW TO PLAY" type="Button" parent="."]
layout_mode = 2
offset_left = 313.0
offset_top = 415.0
offset_right = 823.0
offset_bottom = 492.0
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_uoc1t")
text = "HOW TO PLAY"

[node name="STATISTICS" type="Button" parent="."]
layout_mode = 2
offset_left = 313.0
offset_top = 523.0
offset_right = 546.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 50
text = "STATS"

[node name="EXIT" type="Button" parent="."]
layout_mode = 2
offset_left = 570.0
offset_top = 523.0
offset_right = 819.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 50
text = "EXIT"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -428.0
offset_right = 429.0
offset_bottom = 205.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 150
text = "QUIZOBBER"

[connection signal="pressed" from="START" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CHARACTERS" to="." method="_on_characters_pressed"]
[connection signal="pressed" from="HOW TO PLAY" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HOW TO PLAY" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="STATISTICS" to="." method="_on_statistics_pressed"]
[connection signal="pressed" from="EXIT" to="." method="_on_exit_pressed"]
